# boiler_room

./: .gitignore  Cargo.toml  README.md  example.env
migrations/: 1000_OIDC_auth.sql
src/: error.rs  main.rs  state.rs  traits.rs
src/routes/: auth.rs  mod.rs
src/routes/secure/: mod.rs
src/routes/utils/: mod.rs  request.rs  response.rs  routing.rs
templates/: base.html  index.html  login_redirect.html
templates/secure/: index.html
